fixed call to action section, extra padding on the sides

--- a/styles.css
+++ b/styles.css
@@ -176,7 +176,7 @@ h1 {
 
 .section.call-to-action {
     background-color: #8B4513;
-    padding: 48px;
+    padding: 48px 0px;
 }
 
 .section.call-to-action .content {
